fix text alignment

--- a/styles/main.css
+++ b/styles/main.css
@@ -63,7 +63,9 @@ img.next-image {
 .nav-line .nav-link {
   color: #69778c;
 }
-
+.left {
+  float: left;
+}
 .right {
   float: right;
 }
